--- a/style.scss
+++ b/style.scss
@@ -264,21 +264,7 @@ header {
     }
 
     .nav-links.active::before {
-        content: '';
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(255, 249, 241, 0.9);
-        z-index: -1;    
-        opacity: 1; 
-        transition: opacity 0.3s ease-in-out;       
-
-    }
-
-    .nav-links.active::before {
-        opacity: 1;
+        display: none;
     }
 
     .nav-links a {
